fix overflow behaviour for tweets

--- a/less/main.less
+++ b/less/main.less
@@ -931,7 +931,7 @@ iron-label + paper-icon-button, label + paper-icon-button {
         right: -1em;
     }
     div {
-        max-height: calc(100vh ~"-" @body-header-offset*2 ~"-" 6em);
+        max-height: calc(100% ~"-" @body-header-offset);
         overflow-y: scroll;
     }
     & > paper-icon-button {
